manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-go-coffeshop
  namespace: default  
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.tls.insecureSkipVerify: "true"
    
spec:
  rules:
    - host: opswat.chucthien.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-frontend
                port:
                  number: 8888
          - path: /proxy
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 5000
    # - host: argocd.chucthien.click
    #   http:
    #     paths: 
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: argocd-server
    #             # namespace: argocd
    #             port:
    #               number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.insecureSkipVerify: "true"
spec:
  rules:
    - host: argocd.chucthien.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
